--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,4 +1,4 @@
-<!-- 
+
 
 <div class="login-wrapper"  >
   <mat-card class="box">
@@ -43,17 +43,10 @@
       <button mat-raised-button color="primary" (click)="signIn()" size="default"  type="submit"
         >Logg inn</button
       >
-    </form> -->
+    </form>
 
     <!-- <p class="text-dark mb-0">Ikke bruker?<a href="/sign-up" class="text-primary ml-1">Sign Up now</a></p> -->
-  <!-- </mat-card>
+  </mat-card>
   
-</div> -->
+</div>
 
-<amplify-authenticator>
-  <div>
-    Restaurants App
-    <amplify-sign-out></amplify-sign-out>
-  </div>
-  <!-- previous code -->
-</amplify-authenticator>
