--- a/src/app/components/map-page/map-page.component.html
+++ b/src/app/components/map-page/map-page.component.html
@@ -8,5 +8,5 @@
     </mat-form-field>
   </form> -->
   
-  <app-map (map$)="receiveMap($event)" (zoom$)="receiveZoom($event)" (coord$)="recieveCoord($event)"></app-map>
+  <app-map (map$)="receiveMap($event)" (zoom$)="receiveZoom($event)" ></app-map>
 </div>
