--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,4 +1,4 @@
-<!-- 
+
 
 <div class="login-wrapper"  >
   <mat-card class="box">
@@ -50,11 +50,11 @@
   
   </mat-card>
   
-</div> -->
-<amplify-authenticator *ngIf="authState !== 'signedin'"></amplify-authenticator>
+</div>
+<!-- <amplify-authenticator *ngIf="authState !== 'signedin'"></amplify-authenticator>
 
 <div *ngIf="authState === 'signedin' && user" class="App">
     <amplify-sign-out></amplify-sign-out>
     <div>Hello, {{user.username}}</div>
-    <!-- This is where you application template code goes -->  
-</div>
+  
+</div> -->
