--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -53,7 +53,7 @@
            
             Kart
           </mat-list-item>
-          <mat-list-item (click)="signOut()">
+          <mat-list-item (click)="getCred()">
           
             Log ut
            
