--- a/src/app/components/minicard/minicard.component.html
+++ b/src/app/components/minicard/minicard.component.html
@@ -1,7 +1,8 @@
 <mat-card class="dashboard-card">
     <mat-card-header class="card-header">
-        <mat-card-title>
+        <mat-card-title class="value">
             <h1 class="value-text">{{value}}</h1>
+            <h3 class="unit"> {{unit}}  </h3>
         </mat-card-title>
         <div mat-card-avatar class="card-icon">
             <mat-icon [color]="color" class="avatar-icon">{{icon}}</mat-icon>
