--- a/src/app/dialogs/tiles/tiles.component.html
+++ b/src/app/dialogs/tiles/tiles.component.html
@@ -1,6 +1,6 @@
 <!--dash.component.html-->
 <div class="grid-container">
-  <h1 class="mat-h1">Overview</h1>
+  <h1 class="mat-h1">VærData</h1>
   <mat-grid-list cols="{{ ( cardLayout | async )?.columns }}" rowHeight="200px">
     <!--Mini Cards-->
     <mat-grid-tile *ngFor="let i of cardData" [colspan]="( cardLayout | async )?.miniCard?.cols"
@@ -10,4 +10,8 @@
   
    
   </mat-grid-list>
+  <div mat-dialog-actions>
+    <button mat-button (click)="onNoClick()">Close</button>
+    
+  </div>
  </div>
