--- a/src/app/components/sign-in/sign-in.component.css
+++ b/src/app/components/sign-in/sign-in.component.css
@@ -1,78 +1,160 @@
+* {
+  margin: 0;
+  padding: 0;
+  background-color: #2f2f2f;
+ 
+}
+.main {
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  z-index: 0;
+  background-image: url(https://images.pexels.com/photos/1802268/pexels-photo-1802268.jpeg?cs=srgb&dl=pexels-ricardo-esquivel-1802268.jpg&fm=jpg);
+}
+.d1 {
+  position: absolute;
+  background-image: url(https://images.pexels.com/photos/1802268/pexels-photo-1802268.jpeg?cs=srgb&dl=pexels-ricardo-esquivel-1802268.jpg&fm=jpg);
+  background-size: 2700px 1500px;
 
-.login-wrapper {
-    height: 80vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  height: 30vh;
+  width: 15vw;
+
+  background-position: 0 50%;
+
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.8);
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 2;
+  animation: dd1 10s 1, dd12 10s 1;
+  animation-delay: 4s, 14s;
+}
+.d2 {
+  position: absolute;
+  background-image: url(https://images.pexels.com/photos/1802268/pexels-photo-1802268.jpeg?cs=srgb&dl=pexels-ricardo-esquivel-1802268.jpg&fm=jpg);
+  background-size: 2700px 1500px;
+
+  height: 50vh;
+  width: 25vw;
+
+  background-position: -10vw 50%;
+  left: 10vw;
+
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+  animation: dd2 10s 2;
+  animation-delay: 4s;
+}
+.d3 {
+  position: absolute;
+  background-image: url(https://images.pexels.com/photos/1802268/pexels-photo-1802268.jpeg?cs=srgb&dl=pexels-ricardo-esquivel-1802268.jpg&fm=jpg);
+  background-size: 2700px 1500px;
+  overflow: hidden;
+
+  height: 100vh;
+  width: 40vw;
+  left: 25vw;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.8);
+  background-position: -35vw 50%;
+
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 3;
+  animation: dd3 10s 2;
+  animation-delay: 4s;
+}
+.d4 {
+  position: absolute;
+  overflow: hidden;
+  background-image: url(https://images.pexels.com/photos/1802268/pexels-photo-1802268.jpeg?cs=srgb&dl=pexels-ricardo-esquivel-1802268.jpg&fm=jpg);
+  background-size: 2700px 1500px;
+
+  height: 80vh;
+  width: 25vw;
+  left: 60vw;
+  background-position: -70vw 50%;
+
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+  animation: dd4 10s 2;
+  animation-delay: 4s;
+}
+
+@keyframes dd1 {
+  0% {
+  }
+  50% {
+    width: 95vw;
+  }
+}
+@keyframes dd12 {
+  0% {
+  }
+  50% {
+    background-position: Calc(0vw - 40px) 50%;
+  }
+}
+@keyframes dd2 {
+  0% {
+  }
+  50% {
+    background-position: Calc(-10vw - 40px) 50%;
+  }
+}
+@keyframes dd3 {
+  0% {
+  }
+  50% {
+    background-position: Calc(-35vw - 40px) 50%;
+  }
+}
+@keyframes dd4 {
+  0% {
+  }
+  50% {
+    background-position: Calc(-70vw - 40px) 50%;
+  }
+}
+
+
+
+
+.box {
+  background-color:  #2f2f2f;
+    
+    z-index: 9999;
+   position: absolute;
+   
     
   }
   .content{
       text-align: center;
   }
-
-  .login-wrapper .mat-stroked-button {
-  
+  .title{
+    color: cornsilk;
+    
   }
 
- .login-wrapper .form{
+  .wrapper{
+
+    left: 40%;
+    top: 20%;
+    position: absolute;
+    text-align: center;
+  }
+
+
+
+ .box .form{
 
     min-width: 100%;
     max-width: 300px;
     width: 100%;
   }
 
-  .login-wrapper mat-card-header mat-card-title {
-    font-size: 30px;
-    margin: 0;
-    padding: 10%;
-  }
+ 
 
-  .box {
-    position: relative;
-    
-    top: 0;
-    opacity: 1;
-    float: left;
-    padding: 60px 50px 40px 50px;
-    width: 100%;
-    background:grey;
-    border-radius: 10px;
-    transform: scale(1);
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    z-index: 5;
-    max-width: 330px;
-    color: black;
-  }
 
-  .box.back {
-    transform: scale(.95);
-    -webkit-transform: scale(.95);
-    -ms-transform: scale(.95);
-    top: -20px;
-    opacity: .8;
-    z-index: -1;
-  }
-  
-  .box:before {
-    content: "";
-    width: 100%;
-    height: 30px;
-    border-radius: 10px;
-    position: absolute;
-    top: -10px;
-    background: rgba(255, 255, 255, .6);
-    left: 0;
-    transform: scale(.95);
-    -webkit-transform: scale(.95);
-    -ms-transform: scale(.95);
-    z-index: -1;
-  }
 
-  .login-wrapper mat-card-header {
-    text-align: center;
-    width: 100%;
-    display: block;
-    font-weight: 700;
-  }
+ 
