--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -58,6 +58,11 @@
             Log ut
            
           </mat-list-item>
+          <mat-list-item (click)="getCred()">
+          
+           credentials
+           
+          </mat-list-item>
        
         </mat-nav-list>
       </div>
