--- a/src/app/dialogs/tiles/tiles.component.html
+++ b/src/app/dialogs/tiles/tiles.component.html
@@ -1,17 +1,58 @@
 <!--dash.component.html-->
-<div class="grid-container">
-  <h1 class="mat-h1">VærData</h1>
-  <mat-grid-list cols="{{ ( cardLayout | async )?.columns }}" rowHeight="200px">
-    <!--Mini Cards-->
-    <mat-grid-tile *ngFor="let i of cardData" [colspan]="( cardLayout | async )?.miniCard?.cols"
-      [rowspan]="( cardLayout | async )?.miniCard?.rows">
-      <app-minicard [unit]="i.unit" [icon]="i.icon" [title]="i.title" [color]="i.color" [value]=i.value><div>Mini Card Content Here</div></app-minicard>
-    </mat-grid-tile>
-  
-   
-  </mat-grid-list>
-  <div mat-dialog-actions>
-    <button mat-button (click)="onNoClick()">Close</button>
+
+ <mat-tab-group>
+  <mat-tab label="Værdata"> 
+    <div class="grid-container">
+      <!-- <h1 class="mat-h1">VærData</h1> -->
+      <mat-grid-list cols="{{ ( cardLayout | async )?.columns }}" rowHeight="200px">
+        <!--Mini Cards-->
+        <mat-grid-tile *ngFor="let i of cardData" [colspan]="( cardLayout | async )?.miniCard?.cols"
+          [rowspan]="( cardLayout | async )?.miniCard?.rows">
+          <app-minicard [unit]="i.unit" [icon]="i.icon" [title]="i.title" [color]="i.color" [value]=i.value><div>Mini Card Content Here</div></app-minicard>
+        </mat-grid-tile>
+      
+       
+      </mat-grid-list>
     
-  </div>
- </div>
+     </div>  
+  
+  
+  </mat-tab>
+  <mat-tab label="Alarmer"> 
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+      <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
+    
+      <!-- Position Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Definisjon </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
+    
+      <!-- Name Column -->
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef> status </th>
+        <td mat-cell *matCellDef="let element" > <div *ngIf="element.status"  class="blob red" ></div> 
+        <div *ngIf="!element.status" class="blob green"></div>
+        
+        </td>
+      </ng-container>
+    
+    
+    
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>  
+  
+  
+  
+  
+  </mat-tab>
+
+</mat-tab-group>
+
+<div mat-dialog-actions>
+  <button mat-button (click)="onNoClick()">Close</button>
+  
+</div>
