--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -8,7 +8,7 @@
 <div class="wrapper">
     <mat-card class="box">
       <mat-card-header>
-        <mat-card-title class="title">Log in</mat-card-title>
+        <mat-card-title class="title">Logg inn</mat-card-title>
       </mat-card-header>
   
       <form class="form" (ngSubmit)="signIn()">
