--- a/src/app/components/sign-in/sign-in.component.css
+++ b/src/app/components/sign-in/sign-in.component.css
@@ -27,6 +27,7 @@
   z-index: 2;
   animation: dd1 10s 1, dd12 10s 1;
   animation-delay: 4s, 14s;
+  animation-iteration-count:infinite;
 }
 .d2 {
   position: absolute;
@@ -44,6 +45,7 @@
   z-index: 1;
   animation: dd2 10s 2;
   animation-delay: 4s;
+  animation-iteration-count:infinite;
 }
 .d3 {
   position: absolute;
@@ -62,6 +64,7 @@
   z-index: 3;
   animation: dd3 10s 2;
   animation-delay: 4s;
+  animation-iteration-count:infinite;
 }
 .d4 {
   position: absolute;
@@ -79,6 +82,7 @@
   z-index: 1;
   animation: dd4 10s 2;
   animation-delay: 4s;
+  animation-iteration-count:infinite;
 }
 
 @keyframes dd1 {
