--- a/src/app/components/map-page/map-page.component.css
+++ b/src/app/components/map-page/map-page.component.css
@@ -14,6 +14,39 @@ p {
   display: none;
 }
 
+.pulse{
+  background: rgba(255, 82, 82, 1);
+  box-shadow: 0 0 0 0 rgba(255, 82, 82, 1);
+  animation: pulse-red 2s infinite;
+
+}
+.animated-icon{
+  width: 20px;
+  height: 20px;
+  background-color: rgba(255,255,255,0.5);
+  border-radius: 50%;
+  box-shadow: 0px 0px 4px white;
+  transition: all 1s 
+}
+
+
+@keyframes pulse-red {
+  0% {
+    transform: scale(0.95);
+    
+  }
+  
+  70% {
+    transform: scale(1);
+    
+  }
+  
+  100% {
+    transform: scale(0.95);
+    
+  }
+}
+
 .form{
  
   z-index: 9999999999;
