--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 
 
 
-<mat-toolbar class="toolbar" color="dark">
+<mat-toolbar class="toolbar" color="light">
     <div style="flex: 1 1 auto">
       <!-- <app-change-mode></app-change-mode> -->
     </div>
