--- a/src/app/dialogs/tiles/tiles.component.html
+++ b/src/app/dialogs/tiles/tiles.component.html
@@ -1,6 +1,6 @@
 <!--dash.component.html-->
 
- <mat-tab-group>
+ <mat-tab-group >
   <mat-tab label="Værdata"> 
     <h3>Updated:{{weatherUpdated}} </h3> 
     <div class="grid-container">
@@ -17,7 +17,10 @@
     
      </div>  
   
-  
+     <div mat-dialog-actions>
+      <button mat-button mat-dialog-close>Close</button>
+      
+    </div>
   </mat-tab>
   <mat-tab label="Alarmer">
     <h3>Updated: {{weatherUpdated}} </h3> 
@@ -48,13 +51,12 @@
     </table>  
   
   
-  
+    <div mat-dialog-actions>
+      <button mat-button mat-dialog-close>Close</button>
+      
+    </div>
   
   </mat-tab>
 
 </mat-tab-group>
 
-<div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">Close</button>
-  
-</div>
