--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,1 +1,10 @@
-<p>landing works!</p>
+
+<div class="bgimg">
+    
+    <div class="middle">
+      <h1>Velkommen</h1>
+     
+      <p>Ferjekai</p>
+    </div>
+    
+  </div>
