--- a/src/app/components/sign-in/sign-in.component.css
+++ b/src/app/components/sign-in/sign-in.component.css
@@ -4,124 +4,76 @@
  
  
 }
+
+
+.example-card {
+  max-width: 400px;
+}
 .main {
+
   height: 100vh;
   width: 100vw;
-  position: relative;
+  position: absolute;
   z-index: 0;
-  background-image: url(https://images.pexels.com/photos/1802268/pexels-photo-1802268.jpeg?cs=srgb&dl=pexels-ricardo-esquivel-1802268.jpg&fm=jpg);
+  
 }
-.d1 {
-  position: absolute;
-  background-image: url(https://images.pexels.com/photos/1802268/pexels-photo-1802268.jpeg?cs=srgb&dl=pexels-ricardo-esquivel-1802268.jpg&fm=jpg);
-  background-size: 2700px 1500px;
-
-  height: 30vh;
-  width: 15vw;
-
-  background-position: 0 50%;
-
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.8);
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 2;
-  animation: dd1 10s 1, dd12 10s 1;
-  animation-delay: 4s, 14s;
-  animation-iteration-count:infinite;
-}
-.d2 {
-  position: absolute;
-  background-image: url(https://images.pexels.com/photos/1802268/pexels-photo-1802268.jpeg?cs=srgb&dl=pexels-ricardo-esquivel-1802268.jpg&fm=jpg);
-  background-size: 2700px 1500px;
-
-  height: 50vh;
-  width: 25vw;
-
-  background-position: -10vw 50%;
-  left: 10vw;
-
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 1;
-  animation: dd2 10s 2;
-  animation-delay: 4s;
-  animation-iteration-count:infinite;
-}
-.d3 {
-  position: absolute;
-  background-image: url(https://images.pexels.com/photos/1802268/pexels-photo-1802268.jpeg?cs=srgb&dl=pexels-ricardo-esquivel-1802268.jpg&fm=jpg);
-  background-size: 2700px 1500px;
-  overflow: hidden;
-
-  height: 100vh;
-  width: 40vw;
-  left: 25vw;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.8);
-  background-position: -35vw 50%;
-
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 3;
-  animation: dd3 10s 2;
-  animation-delay: 4s;
-  animation-iteration-count:infinite;
-}
-.d4 {
-  position: absolute;
-  overflow: hidden;
-  background-image: url(https://images.pexels.com/photos/1802268/pexels-photo-1802268.jpeg?cs=srgb&dl=pexels-ricardo-esquivel-1802268.jpg&fm=jpg);
-  background-size: 2700px 1500px;
-
-  height: 80vh;
-  width: 25vw;
-  left: 60vw;
-  background-position: -70vw 50%;
-
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 1;
-  animation: dd4 10s 2;
-  animation-delay: 4s;
-  animation-iteration-count:infinite;
+.content{
+  margin-top: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes dd1 {
-  0% {
-  }
-  50% {
-    width: 95vw;
-  }
+h1 {
+  font-weight: 700;
+  font-size: 10em;
 }
-@keyframes dd12 {
-  0% {
-  }
-  50% {
-    background-position: Calc(0vw - 40px) 50%;
-  }
-}
-@keyframes dd2 {
-  0% {
-  }
-  50% {
-    background-position: Calc(-10vw - 40px) 50%;
-  }
-}
-@keyframes dd3 {
-  0% {
-  }
-  50% {
-    background-position: Calc(-35vw - 40px) 50%;
-  }
-}
-@keyframes dd4 {
-  0% {
-  }
-  50% {
-    background-position: Calc(-70vw - 40px) 50%;
-  }
-}
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,400,300,600,700);
+* {
+  font-family: 'Open Sans';
+  box-sizing: border-box;
+  text-align: center;
+  color: #fff; }
 
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0; }
 
+figure {
+  margin: 0;
+  position: relative; }
+  figure h1 {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    border-right: 3px solid #fff;
+    padding: 5px 10px 5px 5px; }
+
+video {
+  width: 100%;
+  max-width: 100%; }
+
+.stretch {
+  height: 2000px;
+
+  min-height: 100%;
+  min-width: 100%;
+  background-size: cover;
+  margin-top: 800px; }
+  .stretch h1 {
+    padding: 20px; }
+
+.hero-wrapper {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  height: auto;
+  width: auto;
+  min-height: 100%;
+  min-width: 100%;
+  z-index: -9999; }
 
 
 .box {
@@ -136,23 +88,77 @@
       text-align: center;
   }
   .title{
-    color:#2f2f2f;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+   top: 50%;
+   margin-top: 20%;
+   background: linear-gradient(to right, #30CFD0 0%, #0a5cd6 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+
     
   }
 
-  .wrapper{
-
-    left: 40%;
-    top: 20%;
-    position: absolute;
-    text-align: center;
+  header {
+    position: relative;
+    background-color: black;
+    height: 100%;
+    min-height: 25rem;
+    width: 100%;
+    overflow: hidden;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
-
-
-
- .box .form{
-
-   
+  
+  header video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: 0;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+  }
+  
+  header .container {
+    position: relative;
+    z-index: 2;
+    left: 25%;
+  }
+  
+  header .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    opacity: 0.5;
+    z-index: 1;
+  }
+  
+  /* Media Query for devices withi coarse pointers and no hover functionality */
+  
+  /* This will use a fallback image instead of a video for devices that commonly do not support the HTML5 video element */
+  
+  @media (pointer: coarse) and (hover: none) {
+    header {
+      background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;
+    }
+  
+    header video {
+      display: none;
+    }
   }
 
  
