--- a/src/app/components/sign-in/sign-in.component.css
+++ b/src/app/components/sign-in/sign-in.component.css
@@ -4,8 +4,20 @@
  
  
 }
+body {
 
+}
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.test::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.test {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
 .example-card {
   max-width: 400px;
 }
@@ -71,10 +83,15 @@ video {
   right: 0;
   height: auto;
   width: auto;
-  min-height: 100%;
-  min-width: 100%;
+  /* min-height: 100%;
+  min-width: 100%; */
   z-index: -9999; }
 
+  img{
+    max-width: 100%;
+    height: auto;
+
+  }
 
 .box {
   
