--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -7,20 +7,22 @@
 
   <!-- The HTML5 video element that will create the background video on the header -->
       <!-- The header content -->
-    
-        <div class="title">
+    <div class="test"> 
+        <div class="title" (click)="scroll()">
             <h1 >Ferjekai App</h1>
           
           </div>
    
   <div class="hero-wrapper">
     <div class="hero">
-        <figure><video loop="loop" muted="muted" autoplay="autoplay">
+        <figure>
+
+          <img src="assets/waves.png">
+          
+          <!-- <video loop="loop" muted="muted" autoplay="autoplay">
                 <source src="https://cdn.videvo.net/videvo_files/video/free/2013-09/large_watermarked/FerryComingtoDock1_1_preview.mp4" />
-            </video>
-            <figcaption>
-                <h1>Really cool video parallax</h1>
-            </figcaption>
+            </video> -->
+            
         </figure>
     </div>
 </div>
@@ -40,6 +42,8 @@
     </mat-card>
   </div>
   </div>
+</div>
+
 </div>
 
 
