--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -8,7 +8,7 @@
   <!-- The HTML5 video element that will create the background video on the header -->
       <!-- The header content -->
     <div class="test"> 
-        <div class="title" (click)="scroll()">
+        <div class="title" (mouseenter)="scroll()">
             <h1 >Ferjekai App</h1>
           
           </div>
