--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@ body {
   color: var(--text-color-hard);
   font-weight: 400;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  overflow: hidden;
 
 }
 
@@ -26,5 +27,10 @@ body {
 }
 
 
-
+.red{
+  background:#F44336;
+}
+.green{
+  background:#69F0AE ;
+}
 
