--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -4,7 +4,16 @@
     <div class="middle">
       <h1>Velkommen</h1>
      
-      <p>Ferjekai</p>
+      <p>Velg kartet eller sidemeny for fergekaier</p>
+
+      <div class="icons" >
+
+        <img routerLink="/map"
+        routerLinkActive="activebutton" src="assets/mapIcon.png" style="width: 10%;">
+        <h2>Kart</h2>
+      </div>
     </div>
+
+    
     
   </div>
