--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,56 +3,41 @@
 
 
 <mat-toolbar class="toolbar" color="light">
-    <div style="flex: 1 1 auto">
-      <!-- <app-change-mode></app-change-mode> -->
-    </div>
+
+<mat-toolbar-row>
+   
     <div matRipple class="home"
     matTooltip = "Dashboard"
-    routerLink="dash"
+    routerLink="landing"
     routerLinkActive="activebutton"
     >
       <img src="../assets/logo.png" class="logo">
     </div>
   
-    <div class="connection">
-   
-    </div>
-    <button mat-icon-button (click)="sideNav.toggle()">
+    
+    <button class="menu" mat-icon-button (click)="sideNav.toggle()">
       <mat-icon>
-        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/></svg>
+       menu
       </mat-icon>
     </button>
+
+  </mat-toolbar-row>
+  
   </mat-toolbar>
   
-  <mat-sidenav-container>
+  <mat-sidenav-container class="sidenav">
     <mat-sidenav #sideNav mode="push" position="end">
-      <mat-toolbar class="toolbar" color="dark">
-        <div>
-          <img src="../../assets/logo.png" class="logo">
-  
-        </div>
-        
-        <div style="flex: 1 1 auto"></div>
-        <button mat-icon-button (click)="sideNav.toggle()">
-          <mat-icon>
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"/></svg>
-          </mat-icon>
-        </button>
-      </mat-toolbar>
+   
       <div class="items">
         <mat-nav-list>
           <mat-list-item
-          routerLink="/landing" routerLinkActive="activebutton">
+           (click)="openStatusDialog()">
             <!-- <button mat-button routerLink="/dash" routerLinkActive="activebutton">
               Dashboard
             </button> -->
-            Dashboard
+            Sulesund
           </mat-list-item>
-          <mat-list-item routerLink="/map"
-          routerLinkActive="activebutton">
-           
-            Kart
-          </mat-list-item>
+        
           <mat-list-item (click)="signOut()">
           
             Log ut
@@ -66,8 +51,11 @@
   
     <mat-sidenav-content>
       <div [@triggerName]="prepareRoute(outlet)">
-        <router-outlet  #outlet="outlet"></router-outlet>
+        <router-outlet  #outlet="outlet" (activate)='onActivate($event)'></router-outlet>
       </div>
-  
+    
+      
     </mat-sidenav-content>
   </mat-sidenav-container>
+
+ 
