--- a/src/app/dialogs/tiles/tiles.component.html
+++ b/src/app/dialogs/tiles/tiles.component.html
@@ -1,4 +1,5 @@
-<!--dash.component.html-->
+<h1 mat-dialog-title> Sulesund</h1>
+<mat-dialog-content>
 
  <mat-tab-group >
   <mat-tab label="Værdata"> 
@@ -17,10 +18,7 @@
     
      </div>  
   
-     <div mat-dialog-actions>
-      <button mat-button mat-dialog-close>Close</button>
-      
-    </div>
+    
   </mat-tab>
   <mat-tab label="Alarmer">
     <h3>Updated: {{weatherUpdated}} </h3> 
@@ -51,12 +49,13 @@
     </table>  
   
   
-    <div mat-dialog-actions>
-      <button mat-button mat-dialog-close>Close</button>
-      
-    </div>
+  
   
   </mat-tab>
 
 </mat-tab-group>
-
+</mat-dialog-content>
+<mat-dialog-actions>
+  <button mat-button mat-dialog-close (click)="close()">Close</button>
+  
+</mat-dialog-actions>
