--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -9,6 +9,7 @@
       <div class="icons" >
 
         <img routerLink="/map"
+        class="button"
         routerLinkActive="activebutton" src="assets/mapIcon.png" style="width: 10%;">
         <h2>Kart</h2>
       </div>
