--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,11 +2,11 @@
 
 
 
-<mat-toolbar class="toolbar" color="light">
+<mat-toolbar color="light">
 
-<mat-toolbar-row>
+
    
-    <div matRipple class="home"
+    <div matRipple 
     matTooltip = "Dashboard"
     routerLink="landing"
     routerLinkActive="activebutton"
@@ -14,19 +14,19 @@
       <img src="../assets/logo.png" class="logo">
     </div>
   
-    
-    <button class="menu" mat-icon-button (click)="sideNav.toggle()">
+    <div class="menu">
+    <button  mat-icon-button (click)="sideNav.toggle()">
       <mat-icon>
        menu
       </mat-icon>
     </button>
+  </div>
 
-  </mat-toolbar-row>
   
   </mat-toolbar>
   
-  <mat-sidenav-container class="sidenav">
-    <mat-sidenav #sideNav mode="push" position="end">
+  <mat-sidenav-container >
+    <mat-sidenav #sideNav mode="side" position="start">
    
       <div class="items">
         <mat-nav-list>
@@ -58,4 +58,3 @@
     </mat-sidenav-content>
   </mat-sidenav-container>
 
- 
