--- a/src/app/components/landing/landing.component.css
+++ b/src/app/components/landing/landing.component.css
@@ -16,7 +16,9 @@ body, html {
     top: 0;
     left: 16px;
   }
-  
+  .button{
+    cursor: pointer;
+  }
   .bottomleft {
     position: absolute;
     bottom: 0;
@@ -46,7 +48,7 @@ font-size: 10vw;
   }
   .icons{
     margin-top: 20%;
-    cursor: pointer;
+   
   }
 
   .icons h2{
