--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -8,8 +8,8 @@
   <!-- The HTML5 video element that will create the background video on the header -->
       <!-- The header content -->
     <div class="test"> 
-        <div class="title" (mouseenter)="scroll()">
-            <h1 >Ferjekai App</h1>
+        <div class="title" >
+            <h1 (mouseenter)="scroll()">Ferjekai</h1>
           
           </div>
    
