--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 
 
-
+<div  class="example-container">
 
 <mat-toolbar color="light">
 
@@ -26,7 +26,7 @@
   </mat-toolbar>
   
   <mat-sidenav-container >
-    <mat-sidenav #sideNav mode="side" position="start">
+    <mat-sidenav #sideNav mode="push" position="start">
    
       <div class="items">
         <mat-nav-list>
@@ -58,3 +58,4 @@
     </mat-sidenav-content>
   </mat-sidenav-container>
 
+</div>
