--- a/src/app/components/sign-in/sign-in.component.css
+++ b/src/app/components/sign-in/sign-in.component.css
@@ -1,9 +1,4 @@
-* {
-  margin: 0;
-  padding: 0;
- 
- 
-}
+
 body {
 
 }
@@ -38,7 +33,7 @@ body {
 
 h1 {
   font-weight: 700;
-  font-size: 10em;
+  font-size: 20vw;
 }
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,400,300,600,700);
 * {
@@ -88,7 +83,7 @@ video {
   z-index: -9999; }
 
   img{
-    max-width: 100%;
+  width: auto;
     height: auto;
 
   }
@@ -109,7 +104,7 @@ video {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 200px;
+    height: 25em;
    top: 50%;
    margin-top: 20%;
    background: linear-gradient(to right, #30CFD0 0%, #0a5cd6 100%);
@@ -172,10 +167,16 @@ video {
     header {
       background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;
     }
-  
+
+    
     header video {
       display: none;
     }
+
+
+
+    
+  
   }
 
  
