--- a/src/app/dialogs/tiles/tiles.component.html
+++ b/src/app/dialogs/tiles/tiles.component.html
@@ -53,6 +53,12 @@
   
   </mat-tab>
 
+  <mat-tab label="Data">
+
+
+
+  </mat-tab>
+
 </mat-tab-group>
 </mat-dialog-content>
 <mat-dialog-actions>
