--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 
 <div  class="example-container">
 
-<mat-toolbar color="light">
+<mat-toolbar >
 
 
    
@@ -25,16 +25,16 @@
   
   </mat-toolbar>
   
-  <mat-sidenav-container >
-    <mat-sidenav #sideNav mode="push" position="start">
+  <mat-sidenav-container  >
+    <mat-sidenav  #sideNav mode="push" position="start">
    
       <div class="items">
-        <mat-nav-list>
-          <div mat-subheader>Meny</div>
-          <mat-list-item routerLink="/dash" routerLinkActive="activebutton">
+        <mat-nav-list> 
+          <div  mat-subheader >Meny</div>
+          <mat-list-item  routerLink="landing" routerLinkActive="activebutton">
             Home
 
-          </mat-list-item>
+          </mat-list-item >
           <mat-list-item routerLink="/map" routerLinkActive="activebutton">
             Map
 
@@ -60,7 +60,7 @@
       </div>
     </mat-sidenav>
   
-    <mat-sidenav-content>
+    <mat-sidenav-content >
       <div [@triggerName]="prepareRoute(outlet)">
         <router-outlet  #outlet="outlet" (activate)='onActivate($event)'></router-outlet>
       </div>
