--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -43,7 +43,7 @@
           <mat-divider></mat-divider>
           <div mat-subheader>Ferjekaier</div>
           <mat-list-item
-           (click)="openStatusDialog()">
+           (click)="openStatusDialog('Sulesund')">
           
             Sulesund
           </mat-list-item>
