--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -9,7 +9,7 @@
       <!-- The header content -->
     <div class="test"> 
         <div class="title" >
-            <h1 (mouseenter)="scroll()">Ferjekai</h1>
+            <h1 (mouseenter)="scroll()">FERGEKAI</h1>
           
           </div>
    
