--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -46,7 +46,7 @@
           
           <mat-list-item 
           *ngFor="let docks of ferrydocks "
-           (click)="openStatusDialog(docks.name)">
+           (click)="flyToDock(docks.location)">
           
             {{docks.name}}
           </mat-list-item>
@@ -65,7 +65,7 @@
   
     <mat-sidenav-content >
       <div [@triggerName]="prepareRoute(outlet)">
-        <router-outlet  #outlet="outlet" (activate)='onActivate($event)'></router-outlet>
+        <router-outlet  #outlet="outlet" (activate)='onActivate($event)'   ></router-outlet>
       </div>
     
       
