--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -4,7 +4,7 @@
     <div class="middle">
       <h1>Velkommen</h1>
      
-      <p>Velg kartet eller sidemeny for fergekaier</p>
+      <p>Velg kartet for å utforske fergekaier. Sidemeny vil ta deg til fergekai</p>
 
       <div class="icons" >
 
