--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -41,15 +41,15 @@
           </mat-list-item>
 
           <mat-divider></mat-divider>
-          <div mat-subheader>Fergekaier</div>
+          <div mat-subheader>Info</div>
 
           
-          <mat-list-item 
+          <!-- <mat-list-item 
           *ngFor="let docks of ferrydocks "
            (click)="flyToDock(docks.location)">
           
             {{docks.name}}
-          </mat-list-item>
+          </mat-list-item> -->
           <mat-divider></mat-divider>
           <mat-list-item (click)="signOut()" class="logout">
             Log ut
