--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -1,15 +1,16 @@
 .map-container {
-  height: 50vw;
+  height: 92vh;
   width: 100vw;
-  position: inherit;
+  position: absolute;
+  
 }
 
 @media only screen and (max-width: 768px) {
 
 .map-container{
 
-  height: 100%;
-  width: 100%;
+  height: 92.5vh;
+  width: 100vw;
 }
 
 
