--- a/src/app/components/scrollbar/scrollbar.component.html
+++ b/src/app/components/scrollbar/scrollbar.component.html
@@ -1,8 +1,19 @@
 
 
-        <div class="scroll-container hide-scrollbar" >
-            <div *ngFor="let item of docks"
-            (click)="flyToDock(item.location)">
+        <div #container class="scroll-container hide-scrollbar"
+        (mousedown)="onMouseDown($event)"
+        (mouseleave)="onMouseLeave($event)"
+        (mousemove)="onMouseMove($event)"
+        (mouseup)="onMouseUp($event)">
+            <div  class="items" *ngFor="let item of docks"
+            #item
+            (click)="flyToDock(item.location)"
+            (mousedown)="onMouseDown($event)"
+            (mouseleave)="onMouseLeave($event)"
+            (mousemove)="onMouseMove($event)"
+            (mouseup)="onMouseUp($event)"
+           >
+
                 
               {{ item.name }}
             </div>
