--- a/src/app/components/scrollbar/scrollbar.component.scss
+++ b/src/app/components/scrollbar/scrollbar.component.scss
@@ -28,13 +28,15 @@
   .scroll-container {
       z-index: 99999999999999999;
       width: 50vh;
+      height: 10%;
     display: flex;
     -webkit-mask-image: linear-gradient(to right, black 85%, transparent 100%);
     mask-image: linear-gradient(to right, black 85%, transparent 100%);
   
     align-items: center;
-    overflow: hidden;
+    
     position: absolute;
+    overflow-x: scroll;
     top: 85vh;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -52,18 +54,30 @@
       overflow: auto;
     }
   
-    div {
+    .items {
       white-space: nowrap;
       background: black;
       border: 1px solid #efefef;
       border-radius: 25px;
       margin: .1rem;
       padding: .2rem .7rem;
+      transition: all 0.2s;
+      will-change: transform;
+      user-select: none;
+      
+    
+    transform: scale(0.90);
       &:hover {
         cursor: pointer;
         background: #ccc;
       }
     }
+    .items.active {
+      cursor: grab;
+      cursor: -webkit-grabbing;
+      transform: scale(1);
+    }
+  
   }
 
   .content{
