--- a/src/app/components/scrollbar/scrollbar.component.scss
+++ b/src/app/components/scrollbar/scrollbar.component.scss
@@ -26,7 +26,7 @@
     background-color: #777;
   }
   .scroll-container {
-    scroll-snap-type: y mandatory;
+    
       z-index: 99999999999999999;
       width: 50vh;
       height: 10%;
@@ -46,7 +46,7 @@
     align-items: center;
     
     position: absolute;
-    overflow-x: scroll;
+  
     top: 85%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -74,7 +74,6 @@
       padding: .2rem .7rem;
       transition: all 0.2s;
       
-      user-select: none;
       
     
     transform: scale(0.90);
@@ -94,4 +93,10 @@
   .content{
 
     position: absolute;
+  }
+
+  .test{
+    position: absolute;
+    z-index: 99999999999999999;
+    overflow: scroll;
   }
