--- a/src/app/components/scrollbar/scrollbar.component.html
+++ b/src/app/components/scrollbar/scrollbar.component.html
@@ -1,17 +1,15 @@
 
 
-        <div #container class="scroll-container hide-scrollbar"
-        (mousedown)="onMouseDown($event)"
-        (mouseleave)="onMouseLeave($event)"
-        (mousemove)="onMouseMove($event)"
-        (mouseup)="onMouseUp($event)">
+        <div  class=""
+        infiniteScroll
+        [infiniteScrollDistance]="2"
+        [infiniteScrollThrottle]="50"
+        [horizontal]="true"
+       >
             <div  class="items" *ngFor="let item of docks"
-            #item
+           
             (click)="flyToDock(item.location)"
-            (mousedown)="onMouseDown($event)"
-            (mouseleave)="onMouseLeave($event)"
-            (mousemove)="onMouseMove($event)"
-            (mouseup)="onMouseUp($event)"
+           
            >
 
                 
