--- a/src/app/components/map-page/map-page.component.html
+++ b/src/app/components/map-page/map-page.component.html
@@ -14,4 +14,6 @@
   </app-map>
   
 </div>
-<app-scrollbar [docks] ="ferrydocks" [map]="map"></app-scrollbar>
+<app-nav [docks] ="ferrydocks" [map]="map" ></app-nav>
+
+<!-- [docks] ="ferrydocks" [map]="map" -->
