--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,27 +1,39 @@
-<mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
+<div>
+
+
+
+  
+  <mat-drawer class="drawer" #drawer mode="push"  position="end">
+
+
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+     <div  mat-subheader >Velg kai</div> 
+        <mat-list-item  class="items" *ngFor="let item of docks"
+        #item
+        (click)="flyToDock(item.location)"
+       >
+    
+            
+          {{ item.name }}
+        </mat-list-item>
+
+
+  
+
+
+
+
     </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-      <span>ferjekai</span>
-    </mat-toolbar>
-    <!-- Add Content Here -->
-  </mat-sidenav-content>
-</mat-sidenav-container>
+
+   
+  </mat-drawer>
+
+  <button class="button" mat-raised-button (click)="drawer.toggle()">
+    
+    <mat-icon>directions_boat</mat-icon>
+  </button>
+
+
+
+
+</div>
