--- a/src/app/dialogs/tiles/tiles.component.html
+++ b/src/app/dialogs/tiles/tiles.component.html
@@ -76,6 +76,6 @@
 </mat-tab-group>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button mat-dialog-close (click)="close()">Close</button>
+  <button mat-button mat-dialog-close (click)="close($event)">Close</button>
   
 </mat-dialog-actions>
