--- a/src/app/dialogs/tiles/tiles.component.html
+++ b/src/app/dialogs/tiles/tiles.component.html
@@ -30,7 +30,10 @@
       <!-- Position Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Definisjon </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.name}} 
+          <!-- <input matInput type="text" value ={{element.name}}  > -->
+
+        </td>
       </ng-container>
     
       <!-- Name Column -->
