--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -16,3 +16,22 @@
 
 }
 
+.pulse {
+  animation: pulsate 2s ease-out;
+  -webkit-animation: pulsate 1s ease-out;
+  -webkit-animation-iteration-count: infinite; 
+  opacity: 0.0
+}
+
+
+@keyframes pulsate {
+  0% {
+     opacity: 0.0;
+  }
+  50% {
+    opacity: 1.0;}
+
+  100% {  opacity: 0.0;}
+}
+
+
