--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,3 +24,21 @@ html {
   background:#69F0AE ;
 }
 
+
+.pulse {
+  animation: pulsate 2s ease-out;
+  -webkit-animation: pulsate 1s ease-out;
+  -webkit-animation-iteration-count: infinite; 
+  opacity: 0.0
+}
+
+
+@keyframes pulsate {
+  0% {
+     opacity: 0;
+  }
+  50% {
+    opacity: 1;}
+
+  100% {  opacity: 0;}
+}
