--- a/src/app/components/map-page/map-page.component.css
+++ b/src/app/components/map-page/map-page.component.css
@@ -14,12 +14,26 @@ p {
   display: none;
 }
 
-.pulse{
-  background: rgba(255, 82, 82, 1);
-  box-shadow: 0 0 0 0 rgba(255, 82, 82, 1);
-  animation: pulse-red 2s infinite;
 
+.pulse {
+  animation: pulsate 2s ease-out;
+  -webkit-animation: pulsate 1s ease-out;
+  -webkit-animation-iteration-count: infinite; 
+  opacity: 0.0
 }
+
+
+@keyframes pulsate {
+  0% {
+     opacity: 0;
+  }
+  50% {
+    opacity: 1;}
+
+  100% {  opacity: 0;}
+}
+
+
 .animated-icon{
   width: 20px;
   height: 20px;
