--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,20 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; overflow: hidden; }
 
+.pulse {
+    animation: pulsate 2s ease-out;
+    -webkit-animation: pulsate 1s ease-out;
+    -webkit-animation-iteration-count: infinite; 
+    opacity: 0.0
+  }
+  
+  
+  @keyframes pulsate {
+    0% {
+       opacity: 0;
+    }
+    50% {
+      opacity: 1;}
+  
+    100% {  opacity: 0;}
+  }
