--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
     
    
  
-      <img src="../assets/logo.png" class="logo">
+      <img src="../assets/logo.png" (click)="getCred()" class="logo">
     
 
       <div></div>
