--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -51,6 +51,10 @@
           <mat-divider></mat-divider>
           <div mat-subheader>Info</div>
 
+          <mat-list-item (click)="addDock()">
+            +
+          </mat-list-item>
+
       
           <mat-divider></mat-divider>
           <mat-list-item (click)="signOut()" class="logout">
