--- a/src/app/components/create-dock/create-dock.component.html
+++ b/src/app/components/create-dock/create-dock.component.html
@@ -29,7 +29,7 @@
  
        <br />
  
-       <button (click)="register()" class="btn btn-primary btn-block" type="button"> Register </button>
+       <button (click)="register()" class="btn btn-primary btn-block" type="button"> Add </button>
         </div>
 
  </form>
