--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -51,7 +51,7 @@
           <mat-divider></mat-divider>
           <div mat-subheader>Info</div>
 
-          <mat-list-item (click)="addDock()">
+          <mat-list-item *ngIf="checkGroup()" (click)="addDock()">
             +
           </mat-list-item>
 
