--- a/src/app/components/sign-in/sign-in.component.css
+++ b/src/app/components/sign-in/sign-in.component.css
@@ -110,6 +110,7 @@ video {
    background: linear-gradient(to right, #30CFD0 0%, #0a5cd6 100%);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
+  cursor: pointer;
 
     
   }
