--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -5,4 +5,6 @@
   (leafletMapReady)="onMapReady($event)"
   (leafletMapZoomEnd)="onMapZoomEnd($event)"
   (leafletClick) ="onClick($event)"
+  (locationfound)="onLocationFound($event)"
+  (locationerror)="onLocationError($event)"
 ></div>
