--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -40,11 +40,11 @@
         <mat-nav-list> 
           <div  mat-subheader >Meny</div>
           <mat-list-item  routerLink="landing" routerLinkActive="activebutton">
-            Home
+            Hjem
 
           </mat-list-item >
           <mat-list-item routerLink="/map" routerLinkActive="activebutton">
-            Map
+            Kart
 
           </mat-list-item>
 
@@ -60,7 +60,7 @@
       
           <mat-divider></mat-divider>
           <mat-list-item (click)="signOut()" class="logout">
-            Log ut
+            Logg ut
             <mat-icon style="margin-left: 11%;">logout</mat-icon>
            
            
