--- a/src/app/components/loginform/loginform.component.html
+++ b/src/app/components/loginform/loginform.component.html
@@ -1,13 +1,13 @@
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <h1>Login</h1>
-    <p class="text-muted">Sign In to your account</p>
+    <p class="text-muted">Logg inn</p>
     <div class="input-group mb-3">
     <div class="input-group-prepend">
         <span class="input-group-text"><mat-icon class="white-icon">person</mat-icon></span>
     </div>
     <input type="text" formControlName="username" class="form-control" placeholder="Username"  [(ngModel)]="email" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
     <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-    <div *ngIf="f.username.errors.required">Username is required</div>
+    <div *ngIf="f.username.errors.required">Email er nødvendig</div>
     </div>
     </div>
     <div class="input-group mb-4">
@@ -16,12 +16,12 @@
     </div>
     <input type="password" formControlName="password" class="form-control" placeholder="Password" [(ngModel)]="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
     <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-    <div *ngIf="f.password.errors.required">Password is required</div>
+    <div *ngIf="f.password.errors.required">Password er nødvendig</div>
     </div>
     </div>
     <div class="row">
     <div class="col-6">
-    <button type="submit" class="btn btn-primary px-4">Login</button>
+    <button type="submit" class="btn btn-primary px-4">Logg inn</button>
     </div>
 
     </div>
