--- a/src/app/dialogs/tiles/tiles.component.html
+++ b/src/app/dialogs/tiles/tiles.component.html
@@ -10,7 +10,7 @@
         <!--Mini Cards-->
         <mat-grid-tile *ngFor="let i of weatherData" [colspan]="( cardLayout | async )?.miniCard?.cols"
           [rowspan]="( cardLayout | async )?.miniCard?.rows">
-          <app-minicard [unit]="i.unit" [icon]="i.icon" [title]="i.name" [color]="'green'" [value]=i.value><div>Mini Card Content Here</div></app-minicard>
+          <app-minicard (click)="openHistoric(i.name)" [unit]="i.unit" [icon]="i.icon" [title]="i.name" [color]="'green'" [value]=i.value><div>Mini Card Content Here</div></app-minicard>
         </mat-grid-tile>
       
        
