--- a/src/app/dialogs/tiles/tiles.component.html
+++ b/src/app/dialogs/tiles/tiles.component.html
@@ -30,6 +30,12 @@
             The actual rendered columns are set as a property on the row definition" -->
     
       <!-- Position Column -->
+
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> Id. </th>
+        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      </ng-container>
+      
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Definisjon </th>
         <td  mat-cell *matCellDef="let element"> 
@@ -47,8 +53,8 @@
       <!-- Name Column -->
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef> status </th>
-        <td mat-cell *matCellDef="let element" > <div *ngIf="element.value"  class="blob red" ></div> 
-        <div *ngIf="!element.value" class="blob green"></div>
+        <td mat-cell *matCellDef="let element" > <div *ngIf="checkString(element.value)"  class="blob red" ></div> 
+        <div *ngIf="!checkString(element.value)" class="blob green"></div>
         
         </td>
       </ng-container>
